<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.fh.manuel.homework_1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/number1" />

        <EditText
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/number2" />

        <Button
            android:id="@+id/calcbtn"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/calculate"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />

        <TextView
            android:id="@+id/ouput"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/ergebnis"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="246dp" />

        <Button
            android:id="@+id/navibtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/navigate" />

        <SeekBar
            android:id="@+id/seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/seekerValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seekerValue"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
